# TikTik-Smart-Order-System

./: DOCUMENTATION.md  Dockerfile  airports.py  app.py  concert_ocr.py  concerts_data.py  concerts_service.py  exchange_rates.py  flight_ocr.py  hotel_resolver.py  models.py  passport_ocr.py  pdf_generator.py  pyproject.toml  railway.json  replit.md  requirements.txt  sports_api.py  stadium_api.py  teams_stadiums_mapping.json  terms.txt  worldcup2026.json  worldcup_stadiums_mapping.json
fonts/: OpenSans.pkl
pages/: signature.py
templates/: order_template.html  order_template_2.html
